fix: Adjust button and reveal content font sizes for improved readability

--- a/src/components/home/components.css
+++ b/src/components/home/components.css
@@ -1724,7 +1724,7 @@ hr {
 }
 .btn {
   margin: 30px 0;
-  font-size: 1.8rem;
+  font-size: 1.125rem;
   text-decoration: none;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
     Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
@@ -3216,7 +3216,7 @@ html:not(.is-loading).js .is-onscreen .reveal-content {
   bottom: -120px;
   left: 220px;
   transform: translateX(-50%);
-  font-size: 1.2rem;
+  font-size: 0.75rem;
   color: #919795;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
     Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
